fix: support change alignment for small image

--- a/projects/editor/components/editor-socket/editor-socket.component.less
+++ b/projects/editor/components/editor-socket/editor-socket.component.less
@@ -15,8 +15,10 @@
     }
 
     .ProseMirror {
+        display: flow-root;
         min-block-size: 100%;
         margin: 0.2rem 1rem;
+        padding-block-end: 2rem;
         outline: 1px solid transparent;
         white-space: pre-wrap;
     }
